Updated triggers for builds

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -7,7 +7,7 @@ on:
 	  - 'docker-bake.hcl'
 	  - '*.sh'
 	  - '*.sql'
-	  - sqlcmd/*.*
+	  - 'sqlcmd/*.*'
     branches:
     - master
   workflow_dispatch:
