--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -22,6 +22,8 @@ env:
 
 jobs:
   build-and-push-images:
+    runs-on: ubuntu-latest
+
     permissions:
       contents: read
       packages: write
