--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -13,9 +13,10 @@ on:
   workflow_dispatch:
     inputs:
       push:
-        description: 'Push to GitHub Packages'
+        description: 'Push to Container Registry'
+        type: boolean
         required: true
-        default: 'false'
+        default: true
 
 env:
   GHCR_SLUG: ghcr.io/${{ github.repository }}
@@ -38,17 +39,18 @@ jobs:
         image: tonistiigi/binfmt:qemu-v6.2.0
         platforms: linux/amd64,linux/arm64,linux/arm/v7
 
-    - name: Docker Setup Buildx
-      uses: docker/setup-buildx-action@v3.0.0
+    - name: Buildx Setup
+      id: buildx
+      uses: docker/setup-buildx-action@v3.6.1
 
-    - name: Log in to the GitHub Container Registry
+    - name: Log in to the Container Registry
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.repository_owner }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build and Push Production Images
+    - name: Build and Push Images
       uses: docker/bake-action@v2
       env:
         GITHUB_REPOSITORY_OWNER: ${{ github.repository_owner }}
@@ -56,5 +58,8 @@ jobs:
       with:
         files: |
           ./docker-bake.hcl
+        set: |
+          *.cache-from=type=gha
+          *.cache-to=type=gha,mode=max
         targets: 'default'
-        push: ${{ github.event.inputs.PUSH || 'true' }}
+        push: ${{ github.event.inputs.push }}
