add bacpac, bak, and sql init files for testing

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -8,10 +8,11 @@ services:
     platform: linux/amd64  # Force x86-64 platform
     environment:
       - MSSQL_STARTUP_DELAY=30  # Faster startup for development
+      - INSERT_SIMULATED_DATA=true  # Enable simulated data insertion
     volumes:
       # Mount source code for development
       - ./scripts:/scripts
-      - ./docker-entrypoint.sh:/docker-entrypoint.sh
+      - ./test/fixtures/init-sql:/docker-entrypoint-initdb.d
       - ./healthcheck.sh:/healthcheck.sh
     # Enable debug logging
     command: ["/docker-entrypoint.sh", "/opt/mssql/bin/sqlservr", "--accept-eula"]
